Fixed Firefox bottom padding + overflow bug.

--- a/modules/gui/frontend/src/widget/panel.module.css
+++ b/modules/gui/frontend/src/widget/panel.module.css
@@ -13,7 +13,8 @@
     --margin-top: .5rem;
     --margin-bottom: .5rem;
     --header-padding: .5rem .8rem;
-    --content-padding: 1rem .8rem;
+    --content-padding-vertical: 1rem;
+    --content-padding-horizontal: .8rem;
     --padding-panel-buttons: .5rem;
     --header-color: #e8e8e8;
     max-height: calc(100% - 1rem);
@@ -120,10 +121,18 @@
 }
 
 .panelContent {
-    padding: var(--content-padding);
+    padding: var(--content-padding-vertical) var(--content-padding-horizontal);
+    padding-bottom: 0;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+/* [HACK] Fix Firefox bottom padding + overflow bug */
+.panelContent > *:after {
+    content: "";
+    height: var(--content-padding-vertical);
+    display: block;
 }
 
 @media screen and (max-width: 500px) {
